<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle"
    android:layout_marginStart="6dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/life_storyLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life_story_line"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/life_storyLine_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life_story_line_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/life_storyLine_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/fam_treeLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fam_tree_line"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/fam_treeLine_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fam_tree_line_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/family_treeLine_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/spouseLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spouse_line"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/spouseLine_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spouse_line_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/spouseLine_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/fatherSide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/father_side"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/fatherSide_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/father_side_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/fatherSide_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/motherSide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mother_side"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/motherSide_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mother_side_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/motherSide_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/maleEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_events"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/maleEvents_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_events_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/maleEvents_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/femaleEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_events"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/femaleEvents_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_events_detail" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent">
        </TextView>

        <Switch
            android:id="@+id/femaleEvents_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_detail" />
            </TableRow>
        </TableLayout>
    </TableRow>



</TableLayout>
